--- a/index.html
+++ b/index.html
@@ -1,4 +1,42 @@
 <!DOCTYPE html>
-<h1>My testing app</h1>
-<p>This is paragraph</p>
-<p>Troubleshoot pragraph</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Web Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            font-size: 24px;
+        }
+        main {
+            padding: 20px;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>My Web Page</header>
+    <main>
+        <h1>Welcome to Gen-itech Ltd</h1>
+        <p>We Build Your Dream.......</p>
+    </main>
+    <footer>&copy; 2025 My Website</footer>
+</body>
+</html>
